<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_title_text">My Nanodegree Apps</string>
    <string name="main_button1_text">SPOTIFY STREAMER</string>
    <string name="main_button2_text">SCORES APP</string>
    <string name="main_button3_text">LIBRARY APP</string>
    <string name="main_button4_text">BUILD IT BIGGER</string>
    <string name="main_button5_text">XYZ READER</string>
    <string name="main_button6_text">CAPSTONE: MY OWN APP</string>
    <string name="action_settings">Settings</string>
</resources>
